--- a/templates/register.html
+++ b/templates/register.html
@@ -65,7 +65,7 @@ document.getElementById('registerForm').addEventListener('submit', async (e) => 
     }
     
     try {
-        const response = await fetch('/api/users/register/', {
+        const response = await fetch('/api/auth/register/', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
